--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,5 +2,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: url(imgs/discoBG.png);
+  /* background: url(imgs/discoBG.png); */
 }
