--- a/client/src/components/TicketListItem/TicketListItem.css
+++ b/client/src/components/TicketListItem/TicketListItem.css
@@ -1,41 +1,36 @@
-.single-post {
+.single-ticket {
   margin: 20px 0;
   padding: 15px;
   border-radius: 2px;
 }
 
-.post-title{
+.ticket-title{
   font-size: 28px;
   margin-bottom: 16px;
   font-weight: 400;
   color: #616161;
 }
 
-.post-title a{
+.ticket-title a{
   text-decoration: none;
   color: #616161;
 }
 
-.author-name{
-  font-size: 16px;
-  margin-bottom: 16px;
-  color: #757575;
-}
 
-.post-desc{
+.ticket-desc{
   font-size: 14px;
   color: #888;
   margin-bottom: 8px;
 }
 
-.post-action a{
+.ticket-action a{
   color: #555;
   text-decoration: none;
   font-size: 14px;
   font-style: italic;
 }
 
-.post-action a:hover{
+.ticket-action a:hover{
   color: #EF5350;
 }
 
@@ -47,12 +42,12 @@
   margin: 32px auto 0;
 }
 
-.post-detail .post-title{
+.ticket-detail .ticket-title{
   font-size: 42px;
   color: #454545;
 }
 
-.post-detail .post-desc{
+.ticket-detail .ticket-desc{
   font-size: 16px;
   color: #555;
 }
